--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -175,7 +175,7 @@
             android:layout_gravity="center"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="5dp"
-            android:text="Tempat Lahir"
+            android:text="Email"
             android:textColor="#ffffff"
             android:textSize="14sp"/>
 
@@ -189,9 +189,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginLeft="70dp"
+                android:layout_marginLeft="100dp"
                 android:layout_marginRight="5dp"
-                android:text="  : Garut"
+                android:autoLink="email"
+                android:text="       : rikrikherdiana54321@gmail.com"
                 android:textColor="#ffffff"
                 android:textSize="14sp"/>
 
