--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -6,8 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@mipmap/background_2">
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/textView"
@@ -16,7 +15,7 @@
         android:layout_margin="25dp"
         android:gravity="center"
         android:textSize="30sp"
-        android:textColor="#ffffff"
+        android:textColor="#FF000000"
         android:fontFamily="sans-serif-light"
         android:text="Profile"/>
 
@@ -45,7 +44,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
             android:layout_gravity="center"
-            android:textColor="#ffffff"
+            android:textColor="#FF000000"
             android:textSize="20sp"
             android:text="Rikrik Herdiana">
         </TextView>
@@ -64,7 +63,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="5dp"
             android:text="NIM"
-            android:textColor="#ffffff"
+            android:textColor="#FF000000"
             android:textSize="14sp"/>
 
         <androidx.appcompat.widget.LinearLayoutCompat
@@ -77,10 +76,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginLeft="120dp"
+                android:layout_marginLeft="96dp"
                 android:layout_marginRight="5dp"
-                android:text="    : 10119290"
-                android:textColor="#ffffff"
+                android:text=": 10119290"
+                android:textColor="#FF000000"
                 android:textSize="14sp"/>
 
         </androidx.appcompat.widget.LinearLayoutCompat>
@@ -102,7 +101,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="5dp"
             android:text="KELAS"
-            android:textColor="#ffffff"
+            android:textColor="#FF000000"
             android:textSize="14sp"/>
 
         <androidx.appcompat.widget.LinearLayoutCompat
@@ -115,10 +114,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginLeft="100dp"
-                android:layout_marginRight="50dp"
-                android:text="     : IF7"
-                android:textColor="#ffffff"
+                android:layout_marginLeft="80dp"
+                android:layout_marginRight="5dp"
+                android:text=": IF7"
+                android:textColor="#FF000000"
                 android:textSize="14sp"/>
 
         </androidx.appcompat.widget.LinearLayoutCompat>
@@ -139,7 +138,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="5dp"
             android:text="PROGRAM STUDI"
-            android:textColor="#ffffff"
+            android:textColor="#FF000000"
             android:textSize="14sp"/>
 
         <androidx.appcompat.widget.LinearLayoutCompat
@@ -152,10 +151,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginLeft="51dp"
-                android:layout_marginRight="50dp"
+                android:layout_marginLeft="12dp"
+                android:layout_marginRight="5dp"
                 android:text=": TEKNIK INFORMATIKA"
-                android:textColor="#ffffff"
+                android:textColor="#FF000000"
                 android:textSize="14sp"/>
 
         </androidx.appcompat.widget.LinearLayoutCompat>
@@ -176,7 +175,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="5dp"
             android:text="Email"
-            android:textColor="#ffffff"
+            android:textColor="#FF000000"
             android:textSize="14sp"/>
 
         <androidx.appcompat.widget.LinearLayoutCompat
@@ -189,11 +188,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginLeft="100dp"
+                android:layout_marginLeft="88dp"
                 android:layout_marginRight="5dp"
                 android:autoLink="email"
-                android:text="       : rikrikherdiana54321@gmail.com"
-                android:textColor="#ffffff"
+                android:text=": rikrikherdiana54321@gmail.com"
+                android:textColor="#FF000000"
                 android:textSize="14sp"/>
 
         </androidx.appcompat.widget.LinearLayoutCompat>
