--- a/app/src/main/res/layout/activity_update_catatan.xml
+++ b/app/src/main/res/layout/activity_update_catatan.xml
@@ -11,7 +11,7 @@
         android:id="@+id/txtJudul"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="buat judul"
+        android:hint="Buat Judul"
         android:inputType="text"
         android:layout_marginHorizontal="10dp"
         android:layout_marginTop="10dp"
@@ -22,7 +22,7 @@
         android:id="@+id/txtIsi"
         android:layout_width="match_parent"
         android:layout_height="532dp"
-        android:hint="tulis sesuatu..."
+        android:hint="Tulis Sesuatu....."
         android:inputType="textMultiLine"
         android:gravity="top"
         android:layout_below="@+id/txtJudul"
