--- a/app/src/main/res/layout/activity_tambah_catatan.xml
+++ b/app/src/main/res/layout/activity_tambah_catatan.xml
@@ -11,24 +11,22 @@
         android:id="@+id/txtJudul"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="buat judul"
+        android:hint="Buat Judul"
         android:inputType="text"
         android:layout_marginHorizontal="10dp"
         android:layout_marginTop="10dp"
-        android:paddingVertical="20dp"
-        />
+        android:paddingVertical="20dp"/>
 
     <EditText
         android:id="@+id/txtIsi"
         android:layout_width="match_parent"
         android:layout_height="532dp"
-        android:hint="tulis sesuatu..."
+        android:hint="Tulis disini......."
         android:inputType="textMultiLine"
         android:gravity="top"
         android:layout_below="@+id/txtJudul"
         android:layout_margin="10dp"
-        android:paddingTop="10dp"
-        />
+        android:paddingTop="10dp"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btnSimpan"
@@ -38,8 +36,7 @@
         app:srcCompat="@drawable/ic_baseline_check_24"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_margin="20dp"
-        />
+        android:layout_margin="20dp"/>
 
 
 </RelativeLayout>
