--- a/app/src/main/res/layout/activity_tentang_aplikasi.xml
+++ b/app/src/main/res/layout/activity_tentang_aplikasi.xml
@@ -15,7 +15,7 @@
         android:textSize="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
-        android:textColor="#1976D2"
+        android:textColor="#FF000000"
         android:gravity="center" />
 
     <ImageView
