--- a/app/src/main/res/menu/menu_drawer.xml
+++ b/app/src/main/res/menu/menu_drawer.xml
@@ -12,6 +12,10 @@
             android:id="@+id/item2"
 
             android:title="Tentang Aplikasi" />
+        <item
+            android:id="@+id/item3"
+
+            android:title="Logout" />
 
     </group>
 
